# future-sst-prediction-diffusion

./: .gitignore  README.md  environment.yml  pyproject.toml
diffusion_models/: conditional_on_mnist.ipynb  conditional_on_mnist.py  on_mnist-unet.ipynb  on_mnist-unet.py  on_mnist.ipynb  on_mnist.py  unet.py
experiments/: future_sst-conditional_diffusion-fully_connected.py  future_sst-fully_connected_baseline.py  future_sst_diff-baseline_average.ipynb  future_sst_diff-baseline_average.py  future_sst_diff-baseline_fully_connected.ipynb  future_sst_diff-baseline_fully_connected.py  future_sst_diff-baseline_just_previous.ipynb  future_sst_diff-baseline_just_previous.py  future_sst_diff-conditional_diffusion-fully_connected.ipynb  future_sst_diff-conditional_diffusion-fully_connected.py  guess_patches_location.py  min_max_sst.py  patch_statistics.py  sst_unconditional_diffusion.py
scripts/: download_noaa_oi_sst_v2.py  downscale_noaa_ai_sst.py  extract_sst_patches.py
scripts/ws/: bigred200.sh  carbonate.sh
sst/: __init__.py  backward_sampler.py  conditional_backward_sampler.py  evaluate.py  forward_sampler.py  layers.py  losses.py  training_procedures.py
sst/beta_scheduler/: __init__.py  beta_scheduler.py  linear_beta_scheduler.py
sst/dataset/: __init__.py  noaa_oi_sst_v2.py  transforms.py
