[tool.poetry]
name = "future-sst-prediction-diffusion"
version = "0.1.0"
description = ""
authors = ["Quan Nguyen <qmnguyen@iu.edu>", "Adam Will <adjwill@iu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
xarray = "^2022.11.0"
scikit-learn = "^1.1.3"
jupyterlab = "^3.5.0"
jupytext = "^1.14.1"
torch = "^1.13.0"
torchvision = "^0.14.0"
torchaudio = "^0.13.0"
httpx = "^0.23.1"
tqdm = "^4.64.1"
netCDF4 = "^1.6.2"
ipywidgets = "^8.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
